css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0; }

html {
  font-size: 62.5%; }

body {
  font-family: 'Lato', sans-serif; }

.underline {
  display: inline-block;
  position: relative; }
  .underline::before {
    content: '';
    position: absolute;
    height: 0.15rem;
    width: 100%;
    bottom: 0;
    left: 0;
    background-color: #333;
    transform: scaleX(0);
    transform-origin: bottom right;
    transition: transform 0.25s ease-out; }
  .underline:hover::before {
    transform: scaleX(1);
    transform-origin: bottom left; }

.submit {
  height: 3rem;
  width: 12rem;
  background-color: #fff;
  color: #000;
  border: 0.1rem solid #2471a3;
  cursor: pointer;
  transition: all 0.2s ease-in-out; }
  .submit:hover {
    transform: scale(1.1);
    color: #fff;
    background-color: #2471a3; }

.header {
  height: 6rem;
  width: 100%;
  background-color: #fff;
  display: flex;
  align-items: center;
  justify-content: space-between; }
  .header__container {
    border-right: 0.05rem solid #333; }
    .header__container__logo {
      text-decoration: none;
      font-size: 2.5rem;
      color: #2471a3;
      margin-left: 2rem;
      padding: 0 1.5rem 0 0; }
  .header__nav__list {
    font-size: 1.5rem; }
    .header__nav__list__item {
      text-decoration: none;
      color: #333;
      margin-right: 3.5rem; }
      .header__nav__list__item:hover {
        color: #2471a3; }

.showcase {
  background-color: #000; }
  .showcase__carousel {
    position: relative;
    overflow: hidden;
    height: 55rem; }
    .showcase__carousel__slide {
      position: absolute;
      height: 100%;
      width: 100%;
      font-size: 1.2rem;
      opacity: 0;
      transition: opacity 0.4s ease-in-out; }
      .showcase__carousel__slide:first-child {
        background: url("../img/San_Francisco_Img.jpg");
        background-size: 100%;
        background-position: center;
        background-repeat: no-repeat; }
      .showcase__carousel__slide:nth-child(2) {
        background: url("../img/Santa_Monica_Img.jpg");
        background-size: 100%;
        background-position: center;
        background-repeat: no-repeat; }
      .showcase__carousel__slide:nth-child(3) {
        background: url("../img/Los_Angeles_Img.jpg");
        background-size: 100%;
        background-position: center;
        background-repeat: no-repeat; }
      .showcase__carousel__slide:nth-child(4) {
        background: url("../img/Yosemite_Img.jpg");
        background-size: 100%;
        background-position: center;
        background-repeat: no-repeat; }
      .showcase__carousel__slide.current {
        opacity: 1; }
        .showcase__carousel__slide.current .showcase__carousel__slide__content {
          opacity: 1;
          transform: translateX(60rem);
          transition: all 0.7s ease-in-out 0.3s; }
      .showcase__carousel__slide__content {
        position: absolute;
        bottom: 2rem;
        left: -60rem;
        width: 50rem;
        opacity: 0;
        background-color: rgba(255, 255, 255, 0.8);
        color: #333;
        padding: 3.5rem; }
        .showcase__carousel__slide__content h1 {
          margin-bottom: 1rem; }
    .showcase__carousel__buttons button {
      cursor: pointer;
      outline: none;
      background-color: transparent;
      color: #fff;
      padding: 1.3rem 1.5rem;
      border: 0.2rem solid #fff;
      border-radius: 50%; }
      .showcase__carousel__buttons button#next {
        position: absolute;
        top: 40%;
        right: 1.5rem; }
      .showcase__carousel__buttons button#prev {
        position: absolute;
        top: 40%;
        left: 1.5rem; }
      .showcase__carousel__buttons button:hover {
        background-color: #fff;
        color: #333; }

.cities {
  height: 100rem;
  width: 100%;
  padding: 5rem; }
  .cities__form {
    margin-bottom: 3rem; }
    .cities__form__input {
      height: 3rem;
      width: 25%;
      padding-left: 2rem;
      margin-right: 1rem; }
  .cities__row {
    display: grid;
    grid-template-columns: 50% 50%; }
    .cities__row__card {
      width: 90%;
      margin-bottom: 3rem;
      border: 0.1rem solid red;
      border-radius: 0.5rem;
      text-align: center;
      transition: all 0.4s ease; }
      .cities__row__card__img {
        width: 100%;
        height: 30rem;
        background: url("../../img/San_Francisco_Img.jpg");
        border-top-left-radius: 0.2rem;
        border-top-right-radius: 0.2rem;
        background-size: cover; }
      .cities__row__card__content {
        padding: 1rem; }
        .cities__row__card__content__title {
          font-size: 3rem;
          color: #333; }
        .cities__row__card__content__description {
          font-size: 1.4rem; }
        .cities__row__card__content__section {
          margin-top: 1rem;
          text-align: left; }
          .cities__row__card__content__section__title {
            font-size: 2rem;
            color: #333; }
          .cities__row__card__content__section__place {
            margin-top: 0.5rem;
            font-size: 1.7rem; }
            .cities__row__card__content__section__place__link {
              text-decoration: none;
              color: #2471a3; }
            .cities__row__card__content__section__place__description {
              padding: 1rem;
              font-size: 1.4rem; }
      .cities__row__card:hover {
        transform: scale(1.03);
        box-shadow: 0.5rem 0.5rem 1.5rem rgba(0, 0, 0, 0.6); }

.contact {
  height: 100vh;
  align-items: center;
  text-align: center; }
  .contact__head {
    margin-top: 5rem;
    margin-bottom: 5rem; }
    .contact__head__heading {
      font-size: 4rem;
      margin-bottom: 1rem; }
    .contact__head__note {
      font-size: 2rem; }
  .contact__form {
    display: flex;
    flex-direction: column;
    align-items: center; }
    .contact__form__item {
      outline: none;
      font-family: inherit;
      height: 4rem;
      width: 25%;
      margin-bottom: 1.5rem;
      padding-left: 1.5rem;
      border: 0.1rem solid #333;
      border-radius: 2rem; }
      .contact__form__item:focus::-webkit-input-placeholder {
        color: #2471a3; }
    .contact__form__description {
      resize: none;
      height: 8rem;
      padding-top: 1rem;
      border-radius: 1rem; }

